# blog_proto

./: db.sqlite3  pyproject.toml
blog/: settings.py  urls.py
blog_app/: admin.py  forms.py  models.py  urls.py  views.py
blog_app/migrations/: 0001_initial.py  0002_blog_image.py
blog_app/templates/: author.html  base.html  blog.html  generic_forms.html  index.html  login.html  signup.html
